--- a/FirstAPI_net7/appsettings.json
+++ b/FirstAPI_net7/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "conexionPredeterminada": "Data Source=LAPTOP-CMDK1JKT\\SQLEXPRESS;Initial Catalog=BooksDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  }
 }
