culminación de proyecto api con bd

--- a/FirstAPI_net7/appsettings.json
+++ b/FirstAPI_net7/appsettings.json
@@ -9,4 +9,11 @@
   "ConnectionStrings": {
     "conexionPredeterminada": "Data Source=LAPTOP-CMDK1JKT\\SQLEXPRESS;Initial Catalog=BooksDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
-}
+} 
+
+
+//"Persist Security Info=False;User ID=*****;Password=*****;Initial Catalog=AdventureWorks;Server=MySqlServer;Encrypt=True;"
+
+  //"Data Source=LAPTOP-CMDK1JKT\\SQLEXPRESS;Initial Catalog=BooksDB;User ID=sa;Password=Samu2018.;MultipleActiveResultSets=True;Connect Timeout=100;Encrypt=False;Current Language=spanish"
+
+//
